--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,25 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
-}
+    "compilerOptions": {
+      "target": "ESNext",                 
+      "module": "ESNext",                 
+      "moduleResolution": "bundler",      
+      "strict": true,                     
+      "noImplicitAny": true,
+      "esModuleInterop": true,            
+      "allowSyntheticDefaultImports": true,  
+      "resolveJsonModule": true,          
+      "skipLibCheck": true,               
+      "forceConsistentCasingInFileNames": true,
+      "jsx": "react-jsx",                 
+      "allowImportingTsExtensions": true,
+      "noEmit": true,
+      "baseUrl": "./src",                 
+      "paths": {                          
+        "@components/*": ["components/*"],
+        "@utils/*": ["utils/*"]
+      }
+    },
+    "include": ["src"],                   
+    "exclude": ["node_modules", "dist"]   
+  }
+  
