--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "framer-motion": "^12.5.0",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.483.0",
+    "motion": "^12.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
