--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "module": "ESNext",                 
       "moduleResolution": "bundler",      
       "strict": true,                     
-      "noImplicitAny": true,
+      "noImplicitAny": false,
       "esModuleInterop": true,            
       "allowSyntheticDefaultImports": true,  
       "resolveJsonModule": true,          
