--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.11.0",
     "framer-motion": "^12.5.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.483.0",
@@ -20,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "swiper": "^11.2.5",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
