--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.483.0",
@@ -21,7 +26,10 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "swiper": "^11.2.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.14",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
