--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
       "baseUrl": "./src",                 
       "paths": {                          
         "@components/*": ["components/*"],
-        "@utils/*": ["utils/*"]
+        "@utils/*": ["src/utils/*"]
       }
     },
     "include": ["src"],                   
