--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@tailwindcss/vite": "^4.0.14",
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.22.0",
@@ -29,6 +31,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.8"
   },
