--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,7 @@
         "@utils/*": ["src/utils/*"]
       }
     },
-    "include": ["src"],                   
+    "include": ["src", "vite-env.d.ts"],                   
     "exclude": ["node_modules", "dist"]   
   }
   
